fix submit form on firefox

--- a/_sass/_components.header.scss
+++ b/_sass/_components.header.scss
@@ -14,7 +14,7 @@ $header-height--mobile: 67px; // 1px border
 
     .subscribe-form {
       display: flex;
-      width: calc-columns-width(3);
+      width: 360px;
       order: 1;
       margin-left: rhythm(4);
 
